# III-Drone-Core

./: .gitignore  CMakeLists.txt  README.md  dev_states_actions.txt  package.xml
.figures/: action_handling_sequence.drawio  alpha_plane.drawio  maneuver_controller_execution_model.drawio  state_machine_diagram.drawio
config/: parameters.yaml  parameters_icra.yaml  params.yaml  ros_params.yaml
config/node_parameters/: depth_cam_to_mmwave.yaml  drone_frame_broadcaster.yaml  hough_transformer.yaml  maneuver_controller.yaml  pl_dir_computer.yaml  pl_mapper.yaml  px4_mode_test.yaml  trajectory_generator.yaml
docs/: Doxyfile
docs/html/: README_8md.html  ____init_____8py.html  ____init_____8py_source.html  __flight__control__requests_8cpp.html  __flight__control__requests_8cpp__incl.map  __flight__control__requests_8cpp__incl.md5  __flight__control__requests_8cpp_source.html  __local__setup__util__ps1_8py.html  __local__setup__util__ps1_8py.js  __local__setup__util__ps1_8py_source.html  __local__setup__util__sh_8py.html  __local__setup__util__sh_8py.js  __local__setup__util__sh_8py_source.html  annotated.html  annotated_dup.js  atomic_8hpp.html  atomic_8hpp.js  atomic_8hpp__dep__incl.map  atomic_8hpp__dep__incl.md5  atomic_8hpp__incl.map  atomic_8hpp__incl.md5  atomic_8hpp_source.html  behavior__handler_8hpp.html  behavior__handler_8hpp.js  behavior__handler_8hpp__incl.map  behavior__handler_8hpp__incl.md5  behavior__handler_8hpp_source.html  behavior__handler__parameters_8hpp.html  behavior__handler__parameters_8hpp.js  behavior__handler__parameters_8hpp__dep__incl.map  behavior__handler__parameters_8hpp__dep__incl.md5  behavior__handler__parameters_8hpp__incl.map  behavior__handler__parameters_8hpp__incl.md5  behavior__handler__parameters_8hpp_source.html  behavior__state_8cpp.html  behavior__state_8cpp__incl.map  behavior__state_8cpp__incl.md5  behavior__state_8cpp_source.html  behavior__state_8hpp.html  behavior__state_8hpp.js  (+4753 more)
iii_drone_core/: __init__.py
iii_drone_core/configuration/: parameter_handler.py
iii_drone_core/utils/: math.py
include/install/: local_setup.sh  setup.sh
include/log/: latest_build
launch/: control.launch.py  controller.launch.py  double_cable_lander.launch.py  gui.launch.py  iii_drone.launch.py  iii_drone_controller_all.launch.py  iii_drone_pl-mapper_all.launch.py  iii_drone_sim.launch.py  perception.launch.py  pl_mapper_HW.launch.py  pl_mapper_SW.launch.py  rc_launcher_ctrl.launch.py  rc_launcher_perc.launch.py  sensors.launch.py  sensors_real.launch.py  sensors_sim.launch.py  t265_visual_odometry.launch.py  tf.launch.py  tf_real.launch.py  tf_sim.launch.py
rviz/: rviz_config.rviz
scripts/: apt_dependencies.txt  charger_gripper_node.py  data_logger.py  draw_PL_IDs.py  ground_link_republisher.py  iii_gui.py  image_decompress.py  image_drawer.py  install.sh  install_dependencies.sh  points_est_republisher.py  rc_node_launcher.py  update_installed_parameters.py
scripts/payload/: charger_gripper_node.py
src/: .trajectory_controller.cpp.swo  .trajectory_controller.cpp.swp  cable_drum_controller.cpp  cable_drum_controller.h  continuous_mission_orchestrator.cpp  continuous_mission_orchestrator.h  depth_cam_to_mmwave.cpp  double_cable_lander.cpp  double_cable_lander.h  drone_frame_broadcaster_node.cpp  geometry.cpp  hough_interfacer_node.cpp  hough_pub.cpp  hough_transformer_HW.cpp  hough_transformer_SW.cpp  img_3d_to_2d_proj.cpp  img_decompress.cpp  offboard_control_fly_to_line.cpp  pl_dir_computer_node.cpp  pl_dir_computer_node.h  pl_mapper_node.cpp  pl_mapper_node.h  powerline_class.cpp  powerline_class.h  serialization_test.cpp  single_line_class.cpp  single_line_class.h  t265_vio_republisher.cpp  trajectory_controller.cpp  trajectory_controller.h
src/adapters/: combined_drone_awareness_adapter.cpp  control_state_adapter.cpp  gripper_status_adapter.cpp  maneuver_adapter.cpp  point_cloud_adapter.cpp  powerline_adapter.cpp  projection_plane_adapter.cpp  reference_adapter.cpp  reference_trajectory_adapter.cpp  single_line_adapter.cpp  state_adapter.cpp  target_adapter.cpp
src/configuration/: configurator.cpp  parameter.cpp  parameter_bundle.cpp
src/control/: _flight_control_requests.cpp  _mpc_parameters.cpp  combined_drone_awareness_handler.cpp  combined_drone_awareness_handler_parameters.cpp  mpc_parameters.cpp  reference.cpp  reference_trajectory.cpp  state.cpp  trajectory_generator.cpp  trajectory_generator_client.cpp  trajectory_interpolator.cpp
src/matlab_MPC_10Hz/: buildInfo.mat  minOrMax.cpp  minOrMax.h  mpcmoveCodeGeneration.cpp  mpcmoveCodeGeneration_rtwutil.cpp  mpcmoveCodeGeneration_types.h  norm.cpp  norm.h  qpkwik.cpp  qpkwik.h  rtGetInf.cpp  trisolve.cpp  trisolve.h  xgerc.cpp  xgerc.h  xnrm2.cpp  xnrm2.h  xpotrf.cpp  xpotrf.h
src/matlab_MPC_5Hz/: buildInfo.mat  minOrMax.h  mpcmoveCodeGeneration.cpp  mpcmoveCodeGeneration.h  mpcmoveCodeGeneration_types.h  norm.h  xgerc.h
src/matlab_MPC_5Hz_hp10/: buildInfo.mat  defines.txt  minOrMax.h  mpcblock_optimizer.h  mpcmoveCodeGeneration.cpp  mpcmoveCodeGeneration_data.h  mpcmoveCodeGeneration_rtwutil.h  mpcmoveCodeGeneration_types.h  norm.cpp  norm.h  qpkwik.cpp  rtGetNaN.cpp  rt_nonfinite.h  trisolve.cpp  xgerc.cpp  xpotrf.h
src/matlab_MPC_5Hz_hp15/: buildInfo.mat  minOrMax.cpp  minOrMax.h  mpcmoveCodeGeneration.cpp  mpcmoveCodeGeneration_data.cpp  mpcmoveCodeGeneration_initialize.h  mpcmoveCodeGeneration_terminate.h  mpcmoveCodeGeneration_types.h  norm.cpp  norm.h  qpkwik.cpp  qpkwik.h  trisolve.cpp  trisolve.h  xgerc.cpp  xgerc.h  xnrm2.cpp  xnrm2.h  xpotrf.cpp  xpotrf.h
src/matlab_MPC_5Hz_hp20/: buildInfo.mat  minOrMax.cpp  mpcmoveCodeGeneration_types.h  norm.cpp  qpkwik.cpp  qpkwik.h  trisolve.cpp  trisolve.h  xgerc.cpp  xnrm2.cpp  xnrm2.h  xpotrf.cpp  xpotrf.h
src/matlab_MPC_5Hz_hp5/: buildInfo.mat  minOrMax.cpp  minOrMax.h  mpcmoveCodeGeneration.cpp  mpcmoveCodeGeneration_types.h  norm.cpp  norm.h  qpkwik.cpp  qpkwik.h  rtGetNaN.h  trisolve.cpp  trisolve.h  xgerc.h  (+5 more)
tmuxinator/: cont_mission_system_real.yml  low_level_system_sim.yml
udev/: 99-diii-usb.rules
(+347 files in other folders)
